<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:padding="5dp">

   
    <Button
        android:id="@+id/downloadPdf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_Pdf" />

 
    <Button
        android:id="@+id/downloadDoc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_Doc" />

   
    <Button
        android:id="@+id/downloadZip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_zip" />

  
    <Button
        android:id="@+id/downloadVideo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_video" />

   
    <Button
        android:id="@+id/downloadMp3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_mp3" />

   
    <Button
        android:id="@+id/openDownloadedFolder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/openFolder" />

</LinearLayout>
